<resources>
    <string name="app_name">Rock Paper Scissors</string>

    <string name="Welcome">Welcome</string>
    <string name="Instructions">Instructions: select rock,paper or scissors to play.</string>
    <string name="MenuTitle">Delete Match History</string>

    <string name="Statisticsheader">Your all time statistics</string>
    <string name="wdlRatio">win: , Draw: , Lose: </string>
    <string name="action_settings">Settings</string>

    <string name="Matchresult">  </string>


    <string name="you">You</string>
    <string name="cpu">Computer</string>
    <string name="vs">V.S.</string>

    <string name="date">date: </string>

</resources>